; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/uiports/extr_nanoxwin.c_process_keystroke.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/uiports/extr_nanoxwin.c_process_keystroke.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RDP_INPUT_SCANCODE = common dso_local global i32 0, align 4
@RDP_KEYPRESS = common dso_local global i32 0, align 4
@RDP_KEYRELEASE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @process_keystroke to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @process_keystroke(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = call i64 @get_sc(i32* %7, i32* %5, i32* %6)
  %9 = icmp eq i64 %8, 0
  br i1 %9, label %10, label %26

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %19

13:                                               ; preds = %10
  %14 = load i32, i32* @RDP_INPUT_SCANCODE, align 4
  %15 = load i32, i32* @RDP_KEYPRESS, align 4
  %16 = load i32, i32* %5, align 4
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @rdp_send_input(i32 0, i32 %14, i32 %15, i32 %16, i32 %17)
  br label %25

19:                                               ; preds = %10
  %20 = load i32, i32* @RDP_INPUT_SCANCODE, align 4
  %21 = load i32, i32* @RDP_KEYRELEASE, align 4
  %22 = load i32, i32* %5, align 4
  %23 = load i32, i32* %6, align 4
  %24 = call i32 @rdp_send_input(i32 0, i32 %20, i32 %21, i32 %22, i32 %23)
  br label %25

25:                                               ; preds = %19, %13
  br label %26

26:                                               ; preds = %25, %2
  ret void
}

declare dso_local i64 @get_sc(i32*, i32*, i32*) #1

declare dso_local i32 @rdp_send_input(i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
